--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <div class="subscription-box">
         <div class="subscription-header">PRIMER MES GRATIS</div>
         <h2 class="plan-title">Plan Mensual</h2>
-        <p class="description">Prueba gratis por 1 mes. Cancela en cualquier momento. Luego se cobrará $20/mes.</p>
+        <p class="description">Prueba gratis por 1 mes. Cancela en cualquier momento. Luego se cobrará <b>$1/mes</b> (por prueba).</p>
         <ul class="benefits">
           <li>✔ Acceso ilimitado al escaneo QR</li>
           <li>✔ Registro y gestión de datos del ganado</li>
           <li>✔ Soporte prioritario</li>
         </ul>
-        <button class="subscribe-button" onclick="openPayment('monthly')">Suscribirse Mensual - $20</button>
+        <button class="subscribe-button" onclick="openPayment('monthly')">Suscribirse Mensual - $1</button>
       </div>
       
       <div class="subscription-box annual">
@@ -75,7 +75,7 @@
   </div>
   
   <footer class="footer">
-    <p>&copy; 2025 VETA - Soluciones Veterinarias. Todos los derechos reservados.</p>
+    <p>&copy;VETA - Vinculación Eficiente de Tecnología para el Agro.</p>
   </footer>
   
   <script src="script.js" defer></script>
