--- a/Infodelcreador.html
+++ b/Infodelcreador.html
@@ -11,7 +11,7 @@
         <h1>Creador</h1>
         <p>Información sobre el creador de la página web</p>
     </div>
-    <img src="imagen/JenierModss.png" alt="Imagen del creador" class="creator-image">
+    <img src="imagen/JenierMods.png" alt="Imagen del creador" class="creator-image">
     <div class="creator-buttons">
         <button onclick="openWhatsApp()">WhatsApp</button>
         <button onclick="openFacebook()">Facebook</button>
