--- a/QR.html
+++ b/QR.html
@@ -20,5 +20,6 @@
     <div id="qrContentBox">
         <p id="qrContentText">Aquí aparecerá el contenido del código QR</p>
     </div>
+    <button id="historyButton">Historial</button>
 </body>
 </html>
