--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +9,6 @@
   <script src="https://www.paypal.com/sdk/js?client-id=AfPV0f3Neb-6AsDBzEG0EdO5T0cXUT9YnbMzeXRncDQ6puE4xW1lq1aB1-MJpWuggwmdZRedZ85UYwzI"></script>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
-
 <body>
   <header class="header">
     <a href="Infodelcreador.html">
@@ -47,7 +45,6 @@
         </ul>
         <button class="subscribe-button" onclick="openPayment('monthly')">Suscribirse Mensual - $19.99</button>
       </div>
-      
       <div class="subscription-box annual">
         <div class="subscription-header">¡OFERTA ESPECIAL!</div>
         <h2 class="plan-title">Plan Anual</h2>
@@ -55,8 +52,7 @@
         <ul class="benefits">
           <li>✔ Todo lo del plan mensual</li>
           <li>✔ Hacer pedidos rapidos de los QR</li>
-          <li>✔ Respuesta rapida a sus errores</li
-          <li>✔ Acceso a actualizaciones premium</li>
+          <li>✔ Respuesta rapida a sus errores</li <li>✔ Acceso a actualizaciones premium</li>
           <li>✔ Ahorro significativo de 90$</li>
         </ul>
         <button class="subscribe-button annual" onclick="openPayment('annual')">Suscribirse Anual - $149.99</button>
@@ -72,9 +68,14 @@
       <button id="scanBtn" onclick="window.location.href='QR.html'">Escanear código QR</button>
     </section>
   </div>
-  <footer class="footer">
-    <p id="footer-text">&copy; VETA - Vinculación Eficiente de Tecnología para el Agro.</p>
-  </footer>
+<footer class="footer">
+  <p id="footer-text">&copy; VETA - Vinculación Eficiente de Tecnología para el Agro.
+  <div id="bonita" class="bonita" style="display:none;">
+    <a href="soporte.html">
+      <img src="imagen/soporte.png" alt="Soporte" class="support-icon">
+    </a>
+  </p>
+</footer>
   <script src="script.js" defer></script>
 </body>
 </html>
