--- a/soporte.html
+++ b/soporte.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="header">
-    <h1>Soporte - VETA</h1>
+        <h2 class="JO1">SOPORTE TÉCNICO</h2> <h2 <span class="JO">VETA</span></h2>
   </header>
   <div class="container">
     <form id="reclamacionForm">
