--- a/soporte.html
+++ b/soporte.html
@@ -19,7 +19,7 @@
       <button type="submit">Enviar Solicitud</button>
     </form>
     <div id="respuesta" class="respuesta" style="display:none;">
-      <p>Gracias por escribir su inquietud o solicitudes a el soporte técnico de VETA, Le responderemos lo mas pronto posible muchas gracias:</p>
+      <p>Gracias por escribir su inquietud o solicitud al soporte técnico de VETA. Le responderemos lo más pronto posible. Muchas gracias:</p>
       <button id="whatsappBtn" onclick="enviarWhatsApp()">Enviar por WhatsApp</button>
       <button id="gmailBtn" onclick="enviarCorreo()">Enviar por Gmail</button>
     </div>
