--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
       </div>
     </section>
     <section id="paymentSection" class="payment-box" style="display:none;">
-      <h3>Elige una opción de pago:</h3>
+      <h4>Elige una opción de pago:</h3>
       <div id="paypal-button-container"></div>
+      <h6 class="Antes">Antes de adquirir tu suscripción, recuerda primero iniciar sesión en una cuenta de Google.</h6>
     </section>
     <section id="scannerSection" style="display:none;">
       <h2>Escanear Código QR</h2>
